--- a/views/programs/englishlang4all/english4Everyone/home.ejs
+++ b/views/programs/englishlang4all/english4Everyone/home.ejs
@@ -436,13 +436,13 @@
     <h1 class="class-title" style="margin: 5rem 0;">Programme Sponsorisé</h1>
     <div class="container mb-5">
         <div class="row">
-            <!-- Spoken English -->
+            <!-- Faso Students English Boost -->
             <div class="col-md-4">
                 <div class="card-wrapper">
                     <img class="img-fluid img-thumbnail"
                         src="https://res.cloudinary.com/dccibzcxp/image/upload/v1725565869/Afro%20Language%20lab/IMG_7681_2_rqtqmb.jpg"
                         alt="">
-                    <h3 class="level-spc beg">Faso Students English Boost Level 1</h3>
+                    <h3 class="level-spc beg">Faso Students English Boost</h3>
                     <!-- Button trigger modal -->
                     <button type="button" class="mb-2 mx-2 btn btn-primary" data-bs-toggle="modal"
                         data-bs-target="#com">
@@ -493,119 +493,6 @@
                     </button>
                 </div>
             </div>
-            <!-- Pronunciation -->
-            <div class="col-md-4">
-                <div class="card-wrapper">
-                    <img class="img-fluid img-thumbnail"
-                        src="https://res.cloudinary.com/dccibzcxp/image/upload/v1725565873/Afro%20Language%20lab/IMG_7657_dgicfb.jpg"
-                        alt="">
-                    <h3 class="level-spc int">Faso Students English Boost Level 2</h3>
-                    <!-- Button trigger modal -->
-                    <button type="button" class="mb-2 mx-2 btn btn-primary" data-bs-toggle="modal"
-                        data-bs-target="#pro">
-                        En savoir plus
-                    </button>
-
-                    <!-- Modal -->
-                    <div class="modal fade" id="pro" tabindex="-1" aria-labelledby="exampleModalLabel"
-                        aria-hidden="true">
-                        <div class="modal-dialog modal-dialog-centered  modal-lg">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h5 class="modal-title" id="exampleModalLabel">Anglais pour tous</h5>
-                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                        aria-label="Close"></button>
-                                </div>
-                                <div class="modal-body">
-                                    <div id="tv-container">
-                                        <div id="monitor">
-                                            <div class="afrohk-TV">
-                                                <h3 class="text-center afrohk-text mb-2 py-0">
-                                                    <span class="afrohk">Afro</span><span class="tv"> Language <span
-                                                            class="lab">Lab</span></span>
-                                                </h3>
-                                            </div>
-                                            <div id="monitorscreen">
-                                                <iframe id="vimeo-content"
-                                                    src="https://player.vimeo.com/video/675654851?h=749c808189"
-                                                    frameborder="0" height="500px" width="1000px"
-                                                    allow="autoplay; fullscreen; picture-in-picture" allow="fullscreen"
-                                                    title="High-intensity Classes"></iframe>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Fermer</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <hr>
-                    <!-- <a href="" class="mb-2 mx-2 btn btn-outline-success">Témoignage</a> -->
-                    <a href="" class="mb-2 mx-2 btn btn-outline-success">Etudier</a>
-                    <button type="button" class="mb-2 mx-2  btn btn-outline-secondary" data-bs-toggle="modal"
-                    data-bs-target="#enroll">
-                    S'inscrire
-                </button>
-                </div>
-            </div>
-            <!-- Writing -->
-            <div class="col-md-4">
-                <div class="card-wrapper">
-                    <img class="img-fluid img-thumbnail"
-                        src="https://res.cloudinary.com/dccibzcxp/image/upload/v1696889976/Afro%20Language%20lab/IMG_8313_detbsu.jpg"
-                        alt="">
-                    <h3 class="level-spc adv">Faso Students English Boost Level 3</h3>
-                    <!-- Button trigger modal -->
-                    <button type="button" class="mb-2 mx-2 btn btn-primary" data-bs-toggle="modal"
-                        data-bs-target="#wri">
-                        En savoir plus
-                    </button>
-
-                    <!-- Modal -->
-                    <div class="modal fade" id="wri" tabindex="-1" aria-labelledby="exampleModalLabel"
-                        aria-hidden="true">
-                        <div class="modal-dialog modal-dialog-centered  modal-lg">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h5 class="modal-title" id="exampleModalLabel">Anglais pour tous</h5>
-                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                        aria-label="Close"></button>
-                                </div>
-                                <div class="modal-body">
-                                    <div id="tv-container">
-                                        <div id="monitor">
-                                            <div class="afrohk-TV">
-                                                <h3 class="text-center afrohk-text mb-2 py-0">
-                                                    <span class="afrohk">Afro</span><span class="tv"> Language <span
-                                                            class="lab">Lab</span></span>
-                                                </h3>
-                                            </div>
-                                            <div id="monitorscreen">
-                                                <iframe id="vimeo-content"
-                                                    src="https://player.vimeo.com/video/675654851?h=749c808189"
-                                                    frameborder="0" height="500px" width="1000px"
-                                                    allow="autoplay; fullscreen; picture-in-picture" allow="fullscreen"
-                                                    title="High-intensity Classes"></iframe>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Fermer</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <hr>
-                    <!-- <a href="" class="mb-2 mx-2 btn btn-outline-success">Témoignage</a> -->
-                    <a href="" class="mb-2 mx-2 btn btn-outline-success">Etudier</a>
-                    <button type="button" class="mb-2 mx-2  btn btn-outline-secondary" data-bs-toggle="modal"
-                    data-bs-target="#enroll">
-                    S'inscrire
-                </button>
-                </div>
-            </div>
+           
         </div>
     </div>
