--- a/views/programs/englishlang4all/englishClubs/home.ejs
+++ b/views/programs/englishlang4all/englishClubs/home.ejs
@@ -263,7 +263,7 @@
       </section>
       <!-- End Features Section -->
 
-      <!-- ======= Services Section ======= -->
+      <!-- ======= Types of english clubs Section ======= -->
       <section id="services" class="services">
         <div class="container">
           <div class="section-title" data-aos="zoom-out">
@@ -275,7 +275,7 @@
             <!-- General English -->
             <div class="col-lg-4 col-md-6 mt-5 ">
               <div class="icon-box" data-aos="zoom-in-left">
-                <div class="icon"><i class="bi bi-briefcase" style="color: #ff689b;"></i></div>
+                <div class="icon"><i class="bi bi-briefcase" style="color: #6610d0;"></i></div>
                 <h4 class="title"><a href="">Professionals’ English Zone</a></h4>
                 <p class="description">Anglais général pour professionnels, cadres d’entreprises et étudiants.</p>
               </div>
@@ -340,20 +340,20 @@
       </div>
 
       <div class="row">
-        <div class="col-lg-6 col-md-6 mt-4 mt-lg-0">
+        <div class="col-lg-6 col-md-6 mt-4 mt-lg-0 px-4">
           <div class="box" data-aos="zoom-in" data-aos-delay="300">
             <!-- <span class="basic">Basic</span> -->
-            <h3>Basic</h3>
-            <h4>15.000<span><sup> Fcfa</sup> / 6 séances</span></h4>
+            <h3 class="basic">Basic</h3>
+            <h4>15.000<span><sup> Fcfa</sup> / 4 séances</span></h4>
             <ul>
               <li>Validité de 3 mois</li>
               <li>Test de niveau</li>
               <li>Cours en ligne</li>
-              <li>1 Logiciel de langue (PC)</li>
+              <li>2 Logiciels de langue (PC)</li>
               <li>Suivi individuel</li>
             </ul>
             <div class="btn-wrap">
-              <a href="#" class="btn-buy">Buy Now</a>
+              <!-- <a href="#" class="btn-buy">S'inscrire</a> -->
             </div>
           </div>
         </div>
@@ -361,19 +361,17 @@
         <div class="col-lg-6 col-md-6 mt-4 mt-lg-0">
           <div class="box" data-aos="zoom-in" data-aos-delay="300">
             <span class="advanced">Recommandé</span>
-            <h3>Premium</h3>
-            <h4>25.000<span><sup> Fcfa</sup> / 12 séances</span></h4>
+            <h3 class="premium">Premium</h3>
+            <h4>25.000<span><sup> Fcfa</sup> / 10 séances</span></h4>
             <ul>
               <li>Validité de 5 mois</li>
               <li>Test de niveau</li>
               <li>Cours en ligne</li>
               <li>2 Logiciels de langue (PC)</li>
               <li>Suivi individuel</li>
-              <li>Cv traduit en Anglais</li>
-              <li>Accès Bibliothèque</li>
             </ul>
             <div class="btn-wrap">
-              <a href="#" class="btn-buy">Buy Now</a>
+              <!-- <a href="#" class="btn-buy">Buy Now</a> -->
             </div>
           </div>
         </div>
