--- a/views/programs/pecp/home.ejs
+++ b/views/programs/pecp/home.ejs
@@ -316,16 +316,16 @@
           <!-- Conversation courante  -->
           <div class="card">
             <h2 class="card_title">Conversation Courante</h2>
-            <p class="pricing">$ 50<span class="small">/mois</span></p>
+            <p class="pricing">$ 100<span class="small">/mois</span></p>
             <p>Anglais pour la communication courante</p>
-            <p>Minimum 6 mois</p>
+            <p>Durée 6 mois</p>
             <p>Idéal pour Débutant</p>
             <p>Apprentissage à un rythme normal</p>
             <hr>
             <ul class="features">
               <li>Anglais Général</li>
               <li>Accès au cours en ligne</li>
-              <li>1 Séance de cours / semaine</li>
+              <li>2 Séance de cours / semaine</li>
               <li>2 Séances de conversation / semaine</li>
               <hr>
               <p class="fst-italic">Bonus</p>
@@ -337,16 +337,16 @@
           <!-- Conversation technique -->
           <div class="card">
             <h2 class="card_title"> Conversation Technique </h2>
-            <p class="pricing">$ 80<span class="small">/mois</span></p>
+            <p class="pricing">$ 150<span class="small">/mois</span></p>
             <p>Anglais technique pour besoin professionel</p>
-            <p>Minimum 3 mois</p>
+            <p>Durée 3 mois</p>
             <p>Idéal pour Professionnel</p>
             <p>Apprentissage à un rythme normal</p>
             <hr>
             <ul class="features">
               <li>Anglais Technique</li>
               <li>Accès au cours en ligne</li>
-              <li>1 Séance de cours / semaine</li>
+              <li>2 Séance de cours / semaine</li>
               <!-- <li>Accès au cours en ligne</li> -->
               <li>2 Séances de conversation / semaine</li>
               <hr>
@@ -359,16 +359,16 @@
           <!-- Conversation totale -->
           <div class="card">
             <h2 class="card_title">Conversation Totale</h2>
-            <p class="pricing">$ 100<span class="small">/mois</span></p>
+            <p class="pricing">$ 200<span class="small">/mois</span></p>
             <p>Anglais partout </p>
-            <p>Minimum 6 mois</p>
+            <p>Durée 6 mois</p>
             <p>Idéal pour Professionnel Débutant</p>
             <p>Apprentissage à un rythme intensif</p>
             <hr>
             <ul class="features">
               <li>Anglais Général et Technique</li>
               <li>Accès au cours en ligne</li>
-              <li>2 Séances de cours / semaine</li>
+              <li>3 Séances de cours / semaine</li>
               <!-- <li>Accès au cours en ligne</li> -->
               <li>3 Séances de conversation / semaine</li>
               <hr>
@@ -378,6 +378,8 @@
             </ul>
           </div>
 
+          
+
         </div>
       </div>
     </div>
@@ -385,7 +387,7 @@
 
   <div class="inscription-button-2 d-flex justify-content-center py-5">
     <a class="my-2 more text-white" data-bs-toggle="modal" data-bs-target="#inscription">
-      Plus de temps à perdre, <strong>tchatcher en Anglais</strong> est à votre portée. Inscrivez-vous 😉.
+      Plus de temps à perdre, <strong>"Devenir bilingue"</strong> est à votre portée. Contactez nous.
     </a>
   </div>
   <!-- ======= Frequently Asked Questions Section ======= -->
