--- a/public/stylesheets/engforev/home.css
+++ b/public/stylesheets/engforev/home.css
@@ -98,40 +98,23 @@ li i{
 }
 
 .beg {
-  background: #fc4a1a; /* fallback for old browsers */
-  background: -webkit-linear-gradient(
-    to right,
-    #f7b733,
-    #fc4a1a
-  ); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(
-    to right,
-    #f7b733,
-    #fc4a1a
-  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: #4776E6;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #8E54E9, #4776E6);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #8E54E9, #4776E6); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  
 }
 
 .int {
-  background: #4568dc;
-  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #4568dc, #79487a, #4568dc);
-  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #4568dc, #613a63, #4568dc);
-  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: #2b5876;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #4e4376, #2b5876);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #4e4376, #2b5876); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 .adv {
-  background: #007991;
-  /* fallback for old browsers */
-  background: -webkit-linear-gradient(
-    to right,
-    #007991,
-    rgb(66, 141, 119) 6,
-    #007991
-  );
-  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #007991, #2b6352, #007991);
-  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: #41295a;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #2F0743, #41295a);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #2F0743, #41295a); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  
 }
 
 .inscription {
