--- a/public/stylesheets/englishforAll/englishClubs/home.css
+++ b/public/stylesheets/englishforAll/englishClubs/home.css
@@ -24,12 +24,12 @@ body {
 }
 
 a {
-  color: #ef6603;
+  color: #5603ef;
   text-decoration: none;
 }
 
 a:hover {
-  color: #fc8129;
+  color: #4e0ab3;
   text-decoration: none;
 }
 
@@ -259,7 +259,7 @@ section {
   width: 120px;
   height: 1px;
   display: inline-block;
-  background: #fd9042;
+  background: #590be0;
   margin: 4px 10px;
 }
 
@@ -270,7 +270,7 @@ section {
   font-weight: 700;
   text-transform: uppercase;
   font-family: "Poppins", sans-serif;
-  color: #2a2c39;
+  color: #590be0;
 }
 
 /*--------------------------------------------------------------
@@ -424,7 +424,7 @@ border-radius: 5px;
 
 .features .tab-pane ul li {
   padding-top: 1rem;
-  font-family: Georgia, 'Times New Roman', Times, serif;
+  /* font-family: Georgia, 'Times New Roman', Times, serif; */
 }
 
 .features .tab-pane ul i {
@@ -437,13 +437,13 @@ border-radius: 5px;
   margin: 2rem 0;
 }
 .reseautage{
-  font-family: Georgia, 'Times New Roman', Times, serif;
+  /* font-family: Georgia, 'Times New Roman', Times, serif; */
   font-size: 1.5rem;
   padding: 1rem 2rem;
 }
 
 .reseautage-1{
-  font-family: Georgia, 'Times New Roman', Times, serif;
+  /* font-family: Georgia, 'Times New Roman', Times, serif; */
   font-size: 2.5rem;
   text-align: center;
   color: #39035d;
@@ -511,17 +511,19 @@ border-radius: 5px;
   position: relative;
   overflow: hidden;
   border-radius: 10px;
-  background: #fff;
-  box-shadow: 0 2px 29px 0 rgba(68, 88, 144, 0.12);
-  transition: all 0.4s ease-in-out;
+  background-color: #fff;
+  transition: all .3s ease-in-out;
+  box-shadow: rgba(0, 0, 0, 0.15) 0px 15px 25px, rgba(0, 0, 0, 0.05) 0px 5px 10px;
   width: 100%;
   height: 100%;
 }
 
 .services .icon-box:hover {
   transform: translateY(-10px);
-  box-shadow: 0 2px 35px 0 rgba(68, 88, 144, 0.2);
+  background-color: #4231c689;
 }
+
+
 
 .services .icon {
   position: absolute;
@@ -548,7 +550,7 @@ border-radius: 5px;
 }
 
 .services .title a:hover {
-  color: #ef6603;
+  color: #410ae8;
 }
 
 .services .description {
@@ -843,10 +845,10 @@ border-radius: 5px;
   padding: 20px;
   background: #fff;
   text-align: center;
-  box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.12);
   border-radius: 5px;
   position: relative;
   overflow: hidden;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
 }
 
 .pricing h3 {
@@ -855,13 +857,26 @@ border-radius: 5px;
   padding: 30px 15px;
   font-size: 18px;
   font-weight: 600;
-  color: #777777;
-  background: #f8f8f8;
+  color: #ffffffd5;
+}
+
+.basic{
+  background: #2b5876;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #4e4376, #2b5876);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #4e4376, #2b5876); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  
+}
+
+.premium{
+  background: #283c86;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #45a247, #283c86);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #45a247, #283c86); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  
 }
 
 .pricing h4 {
   font-size: 36px;
-  color: #ef6603;
+  color: #4f0edbe8;
   font-weight: 600;
   font-family: "Poppins", sans-serif;
   margin-bottom: 20px;
@@ -874,7 +889,7 @@ border-radius: 5px;
 }
 
 .pricing h4 span {
-  color: #bababa;
+  color: #3b17b2bd;
   font-size: 16px;
   font-weight: 300;
 }
@@ -893,7 +908,7 @@ border-radius: 5px;
 }
 
 .pricing ul i {
-  color: #ef6603;
+  color: #5203ef;
   font-size: 18px;
   padding-right: 4px;
 }
@@ -951,18 +966,6 @@ border-radius: 5px;
 }
 
 
-.pricing .basic {
-  width: 200px;
-  position: absolute;
-  top: 18px;
-  right: -68px;
-  transform: rotate(45deg);
-  z-index: 1;
-  font-size: 14px;
-  padding: 1px 0 3px 0;
-  background: #033aef;
-  color: #fff;
-}
 /*--------------------------------------------------------------
 # F.A.Q
 --------------------------------------------------------------*/
