--- a/views/programs/englishlang4all/englishClubs/home.ejs
+++ b/views/programs/englishlang4all/englishClubs/home.ejs
@@ -391,7 +391,7 @@
               <h3>Parlez Anglais cette
                 année
               </h3>
-              <p class="py-2" style="color: rgb(72, 162, 241); "> Apprenez l'Anglais en essayant autrement en Présentiel
+              <p class="py-2" style="color: rgba(114, 91, 243, 0.848); "> Apprenez l'Anglais en essayant autrement en Présentiel
                 ou 100% en Ligne</p>
             </div>
             <div class="col-lg-3 cta-btn-container text-center">
