--- a/public/assets/css/blog.css
+++ b/public/assets/css/blog.css
@@ -100,25 +100,24 @@ html {
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     border: 0;
     border-radius: 8px;
+    border: 5px solid rgba(0, 0, 0, 0.531);
     box-shadow: rgba(151, 65, 252, 0.2) 0 15px 30px -5px;
-    box-sizing: border-box;
+    /* box-sizing: border-box; */
     color: #ffffffd1;
-    display: flex;
+    /* display: flex; */
     /* font-family: Phantomsans, sans-serif; */
-    font-size: 0.7rem;
     justify-content: center;
-    line-height: 1em;
-    /* max-width: 100%; */
+    width: 100%;
     min-width: 140px;
     padding: 1rem 1.2rem;
-    width: 100%;
+    /* width: 100%; */
     margin: 2rem 1rem;
     text-decoration: none;
     font-size: 1.2rem;
     user-select: none;
     -webkit-user-select: none;
     touch-action: manipulation;
-    white-space: nowrap;
+    /* white-space: nowrap; */
     cursor: pointer;
     transition: all cubic-bezier(0.075, 0.82, 0.165, 1);
 }
