--- a/views/news/blog-1.ejs
+++ b/views/news/blog-1.ejs
@@ -414,7 +414,7 @@
 																</div>
 																<div id="monitorscreen">
 																	<iframe id="vimeo-content"
-																		src="https://player.vimeo.com/video/675654851?h=749c808189"
+																		src=""
 																		frameborder="0" height="500px" width="1000px"
 																		allow="autoplay; fullscreen; picture-in-picture"
 																		allow="fullscreen"
