--- a/views/news/blog-2.ejs
+++ b/views/news/blog-2.ejs
@@ -404,13 +404,12 @@ content="https://images.pexels.com/photos/8730969/pexels-photo-8730969.jpeg?auto
 
      <div class="col-lg-4 sidebar">
       <div class="widgets-container">
-       <p class="video-summary-title">Cliquez ici pour le résumé de l'article en deux minutes</p>
        <div class="blog-author-widget widget-item">
         <div class="d-flex flex-column align-items-center">
         		<!-- Button trigger modal en Savoir plus -->
             <button type="button" class="btn-blog-video" data-bs-toggle="modal"
             data-bs-target="#beg">
-            L'essentiel de l'article en deux minutes
+            Cliquez ici pour le résumé de l'article en deux minutes
           </button>
 
           <!-- Modal -->
@@ -436,7 +435,7 @@ content="https://images.pexels.com/photos/8730969/pexels-photo-8730969.jpeg?auto
                       </div>
                       <div id="monitorscreen">
                         <iframe id="vimeo-content"
-                          src="https://player.vimeo.com/video/675654851?h=749c808189"
+                          src=""
                           frameborder="0" height="500px" width="1000px"
                           allow="autoplay; fullscreen; picture-in-picture"
                           allow="fullscreen"
