--- a/views/news/blog-3.ejs
+++ b/views/news/blog-3.ejs
@@ -36,7 +36,7 @@
  <link
   href="https://fonts.googleapis.com/css2?family=Chivo:wght@400;700;900&family=Poppins:wght@600;700;800;900&display=swap"
   rel="stylesheet" />
- <title>ALL - news</title>
+ <title>ALL - Blog</title>
 
  <style>
   .news-background {
@@ -448,7 +448,7 @@
               </div>
               <div id="monitorscreen">
                <iframe id="vimeo-content"
-                src="https://player.vimeo.com/video/675654851?h=749c808189"
+                src=""
                 frameborder="0" height="500px" width="1000px"
                 allow="autoplay; fullscreen; picture-in-picture"
                 allow="fullscreen"
