--- a/views/news/blog-3.ejs
+++ b/views/news/blog-3.ejs
@@ -87,9 +87,9 @@
         <div class="meta-top">
          <ul>
           <li class="d-flex align-items-center"><i class="bi bi-person"></i>
-           <span>Roger BONZI</span>
+           <span>Ismael ZERBO</span>
           </li>
-          <li class="d-flex align-items-center"><i class="bi bi-clock"></i> <span>05 Juin 2024</span></li>
+          <li class="d-flex align-items-center"><i class="bi bi-clock"></i> <span>15 Dec 2024</span></li>
           <!-- <li class="d-flex align-items-center"><i class="bi bi-chat-dots"></i> <a href="blog-details.html">12 Comments</a></li> -->
          </ul>
         </div>
